<resources>
    <string name="app_name">你车我车</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logintitle">登录</string>
    <string name="regist">注册</string>
    <string name="usernamemsg">请输入您的手机号</string>
    <string name="nicknammsg">请输入您的昵称</string>
    <string name="pswmsg">请输入您的密码</string>
    <string name="otherlogin">第三方登录</string>
    <string name="faillogin">客服 400 - 1111 - 908</string>
    <string name="failpsw">忘记密码</string>
    <string name="code">请输入验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="psw">请输入密码</string>
    <string name="repsw">确认密码</string>
    <string name="invitation">请输入邀请码(选填)</string>
    <string name="failmobile">请输入正确的手机号</string>
    <string name="reset">重置密码</string>
    <string name="bindmob">绑定手机号</string>
    <string name="skip">跳过</string>
    <string name="makeskip">确定跳过?</string>
    <string name="nologin">暂未登录,确定登录?</string>
    <string name="loginmsg">请登录</string>
    <string name="allcommodity">所有商品</string>
    <string name="shopcomm">商城</string>
    <string name="freetrial">免费试用</string>
    <string name="findrecomm">精品推荐</string>
    <string name="category">分类</string>
    <string name="categorycommit">提交反馈</string>
    <string name="categorymsg">如果没有你想要的类别;商品类别划分不合理;无法方便的找到商品,请向我们吐槽,反馈。反馈有积分！</string>
    <string name="alltitle">所有商品</string>
    <string name="committype">类别</string>
    <string name="entertext">请输入您想要的商品</string>
    <string name="pricerank">价格排序</string>
    <string name="sales">销量排序</string>
    <string name="compre">综合排序</string>
    <string name="itemtitle">博世/BOSCH-26寸u型接口雨刷片</string>
    <string name="allprice">价格:￥</string>
    <string name="allexample">比线下已优惠</string>
    <string name="addnum">购买数量</string>
    <string name="addcart">加入购物车</string>
    <string name="selectcolor">请选择颜色分类</string>
    <string name="proeva">请选择颜色分类</string>
    <string name="pingjiamsg">产品评价</string>
    <string name="collection">收藏</string>
    <string name="collectioned">已收藏</string>
    <string name="nowbuy">立即购买</string>
    <string name="chopmsg">商品评价</string>
    <string name="freetitle">免费试用</string>
    <string name="freeed">已申请</string>
    <string name="finished">已结束</string>
    <string name="willfree">即将开启</string>
    <string name="oldfree">往期试用</string>
    <string name="freenum">产品数量</string>
    <string name="num">件</string>
    <string name="pel">人</string>
    <string name="freepel">申请人数</string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="freerep">试用报告</string>
    <string name="freeeva">活动评价</string>
    <string name="freeist">中奖名单</string>
    <string name="staytuned">敬请期待</string>
    <string name="nowrep">立即申请</string>
    <string name="freemsg">\u3000恭喜老板!您已在免费试用阶段队列中\n下一步是等待审核,请静心等待即可!</string>
    <string name="goshop">去逛逛商城</string>
    <string name="gofree">去逛逛试用</string>
    <string name="comdetal">产品详情</string>
    <string name="comdsale">包装售后</string>
    <string name="comdetail">产品介绍</string>
    <string name="comdspec">规格参数</string>
    <string name="edtinout">请输入您对该活动（产品）想说的话。</string>
    <string name="isemple">评论不能为空</string>
    <string name="reptip">提示:请认真填写试用报告,人工审核通过后可获得积分</string>
    <string name="submitrep">提交试用报告</string>
    <string name="carapp">产品外观</string>
    <string name="appmsg">请写下您使用该产品的美观程度</string>
    <string name="carpric">产品价格</string>
    <string name="carqua">产品质量</string>
    <string name="carcom">综合评分</string>
    <string name="selectpric">预览</string>
    <string name="allpic">所有图片</string>
    <string name="photo">图片</string>
    <string name="maxum">最多选择4张</string>
    <string name="trialag">试用协议</string>
    <string name="interlist">中奖名单</string>
    <string name="retruego">申请退货</string>
    <string name="regon">退货</string>
    <string name="retrungonmsg">请简单描述您的问题,感谢配合!</string>
    <string name="enter">确定</string>
    <string name="fault">网络故障，请先检查网络连</string>
    <string name="feedback">反馈</string>
    <string name="finishapp">在按一次退出程序</string>
    <string name="nomore">没有更多数据了</string>
    <string name="pull_to_refresh_pull_down_label">滑动刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="addmore">加载更多</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="pay_by_wxap">调起微信支付</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>
    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="title_image_picker">本地相册</string>
    <string name="shopcar">购物车</string>
    <string name="allchoose">全选</string>
    <string name="free_send">免费配送</string>
    <string name="addcollect">移入收藏</string>
    <string name="shop_num">购买数量</string>
    <string name="sure_order">提交订单</string>
    <string name="pay_weixin">微信支付</string>
    <string name="pay_zhifubao">支付宝支付</string>
    <string name="commitpay">结算</string>
    <string name="succees_pay">订单支付已完成！</string>
    <string name="fault_pay">订单支付失败！</string>
    <string name="freeproces">免费试用流程</string>
    <string name="souces">筛选规则</string>
    <string name="souces1">我们在筛选申请的时候会考虑这些:</string>
    <string name="souces2">\u3000\u30001·活跃在微博微信以及连续参加活动的用户</string>
    <string name="souces3">\u3000\u30002·有过详细精美的试用报告者</string>
    <string name="souces4">\u3000\u30003·提出有价值建议反馈和创意的用户</string>
    <string name="freeresturn">查看试用结果</string>
    <string name="freesubmit">提交试用结果</string>
    <string name="usprocess">\u3000\u3000试用流程免费试用主打汽车用品的免费试用。由厂商提供汽车用品的现货,用户只需申请就有可能获得免费试用资格。并在试用后提交试用报告即可永久保留试用产品。免费试用能让大家听到用户最最真实的声音。在这里，您的每一条讨论、每一条建议都将影响着产品的未来。我们致力于打造中国可信赖的汽车用品电商平台！</string>
    <string name="freequalif">\u3000\u3000查看申请结果试用名单公布后，可以进入“个人中心”页面，点击活动记录的子页面，查看试用活动记录。在往期回顾> 产品详情页也可以查看本次申请的最终结果。如果显示"恭喜中奖"，表示您获得了试用资格；如果显示“再接再厉”，则表示您并未获得试用资格。 </string>
    <string name="trialresults">\u3000\u3000获得试用资格的用户，我们将按照您填写的收货地址为您邮寄产品。收到产品后，请立即开始体验，并在2周之内提交试用报告。进入 往期回顾> 产品详情，点击“提交试用报告”，您就可以填写并提交您的试用报告了。优秀的试用报告得更多的奖励。逾期未提交报告者，将被列入黑名单，失去试用机会。</string>
    <string name="aboutsus">\u3000\u3000北京你车我车电子商务股份有限公司所创建的你车我车是中国最大的汽车用品网购平台,也是中国最专业的汽车用品信息发布平台.这里汇聚了上千家世界一流的汽车用品厂商和5万余家汽车用品线下服务商,并通过便捷的平台操作使B2B、B2C、O2O等多种商业模式的融合成为可能.——你车我车顺势而生！\n\u3000\u3000数据显示：2013年,中国汽车保有量达到1.4亿量,由此产生的汽车用品消费高达5025亿人民币.专家预测,2015年中国的汽车用品带来的产值将达到6300亿.然而,这一庞大的数字的背后,却是中国汽车用品行业电商化发展的严重不足.其根本原因在于中国至今没有一家专业的汽车用品垂直电商平台.在社会消费品电商化的大趋势下,你车我车,专业车品领导者！\n\u3000\u3000电子商务的迅猛发展为人们的生活带来了极大的便利,很多时候足不出户便可购遍全球.然而,任何事物都有两面,电商同样也是一把双刃剑：在便利、实惠的背后,是商品质量的不确定性.在非专业领域,如服饰、书籍等商品,由于假货并不影响其适用性,为了方便消费者大可以睁一只眼闭一只眼.然而,在汽车用品这种专业商品领域,消费者几乎对假货“零容忍”——无论多小的纰漏,都会对行车安全造成巨大威胁.汽车用品的专业性决定了其不能和一般社会消费品混为一谈,只能走垂直电商模式.而中国这么大的汽车用品市场,却没有诞生一家具有全国影响力的垂直电商.\n\u3000\u3000专业的车品,需要具有专业素质的电商平台来运作.你车我车来了！我们汇聚了1000多家世界一流的汽车用品厂商,同时建立了庞大的线下加盟服务体系,将中国汽车用品流通渠道彻底电商化升级,实现汽车用品障专业货源的同时,真正做到了正品低价.你车我车,专业车品领导者！你车我车,开启电商3.0时代！\n\u3000\u3000电商1.0时代,企业与企业之间通过B2B电商平台（如阿里巴巴）进行交易,开拓了中国的电商蓝海.\n\u3000\u3000电商2.0时代,消费者（C）作为独立的电商角色被加入进来,产生了B2C、C2C,甚至C2B的商业模式,让中国电商真正繁荣起来.而在你车我车,无论B2B、B2C,还是新兴的O2O,都只是商业模式的环节之一.\n\u3000\u3000 你车我车,开启中国电商3.0时代.你车我车,将线下流通渠道彻底电商化升级,开启中国电商3.0时代！</string>
    <string name="feedbookmsg">\u3000\u3000见证一段免费体验平台的发展历程，你车我车，属于你我 !\n\n\u3000\u3000每个阶段都会有新的视角，新的功能需求应运而生，消费者可以搜集不同的视角，用自己的语言阐述自己的想法和意见。\n\n\u3000\u3000你车我车和大家一起来打造一款，真正从用户角度出发，为用户服务的免费体验平台。\n\n\u3000\u3000体验，感受，发现，跟随，同在。\n\u3000\u300021世纪最新的上线模式!\n\n\u3000\u3000不同阶段的注册用户会享受不同的体验概率!\n\n\u3000\u3000残缺也是一种完美，你想了解一个电商平台是如何做起来的吗？\n\n\u3000\u3000这是一个车与互联网的时代，跟着我们一起，让互联网触手可及!</string>
    <string name="my">我的</string>
    <string name="setting">设置</string>
    <string name="my_order">我的订单</string>
    <string name="my_place">我的地址</string>
    <string name="my_liulan">我的浏览</string>
    <string name="my_shoucang">我的收藏</string>
    <string name="my_yaoqing">我的邀请</string>
    <string name="my_fankui">反馈信息</string>
    <string name="my_jieshao">活动介绍</string>
    <string name="aboutus">关于我们</string>
    <string name="username">用户名</string>
    <string name="nicheng">昵称</string>
    <string name="phonenum">手机号</string>
    <string name="email">邮箱</string>
    <string name="nobind">未绑定</string>
    <string name="sevice_password">密码服务</string>
    <string name="changepassword">修改密码</string>
    <string name="exit">退出登录</string>
    <string name="verification_code">请输入验证码</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="change_phone">更改手机号</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="change_email">更改邮箱</string>
    <string name="will_send_product">我们即将为您发货!</string>
    <string name="please_write_email">　请输入您的邮箱</string>
    <string name="please_write_phone">请输入您的手机号</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="oldpwd">原始密码</string>
    <string name="newpwd">请输入您的新密码</string>
    <string name="surepwd">请确认新密码</string>
    <string name="myvantages">我的积分</string>
    <string name="allvantages">现有积分：</string>
    <string name="vantages_first">首次注册：</string>
    <string name="vantages_friend">邀请好友：</string>
    <string name="vantages_product">购买商品：</string>
    <string name="vantages_fankui">反馈信息：</string>
    <string name="shiyongjilu">试用记录</string>
    <string name="add_to_shopcar">加入购物车</string>
    <string name="add_place">\u3000新增地址</string>
    <string name="new_place">新增地址</string>
    <string name="write_youbian">请输入邮编（可选）</string>
    <string name="choose_place">请选择地区</string>
    <string name="write_place">请输入收货人详细地址</string>
    <string name="write_phone">请输入收货人联系方式</string>
    <string name="write_name">请输入收货人姓名</string>
    <string name="fankui_msg">反馈信息</string>
    <string name="fankui_pangbai">感谢使用我们的APP，如果在使用中遇到问题可以向我们反馈，优秀的反馈会获得更多的积分奖励。</string>
    <string name="get_vantages">获得积分</string>
    <string name="shifouchayue">是否查阅</string>
    <string name="fankui_leibie">反馈类别</string>
    <string name="time">时间</string>
    <string name="fankui_content">请输入要反馈的信息，我的奖励在等你呦！\n（限100字）</string>
    <string name="write_lianxifangshi">请输入您的联系方式\u3000手机/微信/QQ</string>
    <string name="send_commit">提交</string>
    <string name="fromalbumselection">从相册选择</string>
    <string name="photograph">拍照</string>
    <string name="my_yaoqing_code">我的邀请码</string>
    <string name="share_to_friend">分享给好友</string>
    <string name="set_username">点击输入用户名</string>
    <string name="order_all">所有订单</string>
    <string name="order_nopay">待付款</string>
    <string name="order_wait">待收货</string>
    <string name="order_need_pingjia">待评价</string>
    <string name="trading_success">交易成功</string>
    <string name="wuliu_msg">物流信息</string>
    <string name="sure_shouhuo">确认收货</string>
    <string name="cancel_dingdan">取消订单</string>
    <string name="pay">立即支付</string>
    <string name="delete_dingdan">删除订单</string>
    <string name="look_more">订单详情</string>
    <string name="pingjia">评价</string>
    <string name="shopping_sale">优惠券</string>
    <string name="pingjia_products">商品评价</string>
    <string name="jifenjilu">积分记录</string>
    <string name="jifenchoujiang">积分抽奖</string>
    <string name="zanweilaiqi">该功能暂未开启，敬请期待......</string>
    <string name="zhongjiang">邀请好友越多中奖率越高！</string>
    <string name="my_icon">头像</string>
    <string name="fankui_fuwu">服务反馈</string>
    <string name="fankui_product">商品反馈</string>
    <string name="fankui_jianyi">建议反馈</string>
    <string name="fankui_use">使用反馈</string>
    <string name="finishappenter">确认退出?</string>
    <string name="none_login">请先登录账号</string>
    <string name="please_write_right_phone">请填写正确的手机号</string>
    <string name="please_wait">验证已发送，请等待</string>
</resources>