<?xml version="1.0" encoding="utf-8"?>
<com.ncwc.shop.widget.DamRebScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar" />

        <EditText
            android:id="@+id/nickname"
            style="@style/editText_style"
            android:layout_marginTop="20dp"
            android:hint="@string/nicknammsg" />

        <EditText
            android:id="@id/username"
            style="@style/editText_style"
            android:layout_marginTop="20dp"
            android:hint="@string/usernamemsg"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@id/code"
                style="@style/editText_style"
                android:layout_weight="1"
                android:hint="@string/code" />

            <TextView
                android:id="@id/getcode"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:background="@drawable/textviewcode_selector"
                android:gravity="center"
                android:text="@string/getcode"
                android:textColor="@color/codetext"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@id/psw"
            style="@style/editText_style"
            android:layout_marginTop="10dp"
            android:hint="@string/psw" />

        <EditText
            android:id="@id/repsw"
            style="@style/editText_style"
            android:layout_marginTop="10dp"
            android:hint="@string/repsw" />

        <EditText
            android:id="@id/invitation"
            style="@style/editText_style"
            android:layout_marginTop="10dp"
            android:hint="@string/invitation" />

        <CheckBox
            android:id="@id/check_xy"
            style="@style/CustomCheckboxTheme"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:textColor="@color/textBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@id/regist"
            style="@style/textView_style"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/logintextview_selector"
            android:text="@string/regist"
            android:textColor="@color/white" />
    </LinearLayout>
</com.ncwc.shop.widget.DamRebScrollView>