<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <EditText
        android:id="@id/username"
        style="@style/editText_style"
        android:layout_marginTop="20dp"
        android:hint="@string/usernamemsg"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@id/code"
            style="@style/editText_style"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="@string/code"
            android:inputType="phone" />

        <TextView
            android:id="@id/getcode"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/textviewcode_selector"
            android:gravity="center"
            android:text="@string/getcode"
            android:textColor="@color/codetext"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@id/regist"
        style="@style/textView_style"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/logintextview_selector"
        android:text="@string/enter"
        android:textColor="@color/white" />
</LinearLayout>